--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".GlblConf"
@@ -31,9 +33,32 @@
             android:name=".GameContent"
             android:exported="false" />
 
+        <!-- Replace value with your AdMob Application ID -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-9426884596605370~7786852062"/>
-    </application>
+            android:value="ca-app-pub-9426884596605370~5423524555"/>
 
+        <!-- Replace com.madgamingdev.mgdsdk with your own Package Name -->
+        <receiver
+            android:name=".NotifSecond"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="dev.joven.secondlib.NOTIFICATION_ACTION" />
+            </intent-filter>
+        </receiver>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
+        <meta-data android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled" android:value="false"/>
+        <meta-data android:name="com.facebook.sdk.AutoLogAppEventsEnabled" android:value="false"/>
+        <meta-data android:name="com.facebook.sdk.AutoInitEnabled" android:value="false"/>
+        <provider android:authorities="com.facebook.app.FacebookContentProvider673358091652928"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="false"/>
+    </application>
+    <queries>
+        <provider android:authorities="com.facebook.katana.provider.PlatformProvider" />
+        <provider android:authorities="com.facebook.orca.provider.PlatformProvider" />
+    </queries>
 </manifest>
